--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="hero">
         <div class="container">
-            <div class="icons"></div>
+            <h1 class="h1" style="font-family: Georgia, 'Times New Roman', Times, serif;">Digital Clock</h1>
             <div class="clock shadow-lg">
                 <span id="hrs">00</span>
                 <span>:</span>
